# quickmd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  _project.vim
.github/workflows/: release-binary.yml
res/: default_config.yaml  help_popup.html  layout.html  quickmd.yaml
res/js/: main.js
res/style/: github.css  main.css
resources/: main.js  template.html
src/: assets.rs  background.rs  input.rs  lib.rs  main.rs  markdown.rs  ui.rs
src/ui/: action.rs  browser.rs  dialogs.rs  file_picker.rs  mod.rs
tests/: test_assets.rs  test_background.rs  test_input.rs  test_markdown.rs  test_ui_action.rs  test_ui_actions.rs
