[package]
name        = "quickmd"
version     = "0.4.2"
authors     = ["Andrew Radev <andrew.radev@protonmail.com>"]
edition     = "2018"
license     = "MIT OR Apache-2.0"
description = "Quickly preview a markdown file"
readme      = "README.md"
keywords    = ["markdown", "gtk"]
exclude     = ["tests/**", "_project.vim"]
repository  = "https://github.com/AndrewRadev/quickmd"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow         = "1.0.26"
directories    = "3.0.1"
env_logger     = { version = "0.8.2", default-features = false }
gdk            = "0.13.2"
gdk-pixbuf     = "0.9.0"
gio            = "0.9.1"
glib           = "0.10.3"
gtk            = { version = "0.9.0", features = ["v3_16"] }
log            = "0.4"
notify         = "4.0.15"
pathbuftools   = "0.1.2"
pulldown-cmark = { version = "0.8.0", default-features = false, features = ["simd"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0.61"
serde_yaml     = "0.8.15"
structopt      = { version = "0.3.11", default-features = false }
tempfile       = "3.1.0"
webkit2gtk     = "0.11.0"

[dev-dependencies]
claim = "0.4.0"
