[package]
name        = "quickmd"
version     = "0.7.1"
authors     = ["Andrew Radev <andrew.radev@protonmail.com>"]
edition     = "2024"
license     = "MIT OR Apache-2.0"
description = "Quickly preview a markdown file"
readme      = "README.md"
keywords    = ["markdown", "gtk"]
exclude     = ["tests/**", "_project.vim"]
repository  = "https://github.com/AndrewRadev/quickmd"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow         = "1.0.68"
directories    = "4.0.1"
env_logger     = { version = "0.10.0", default-features = false }
gdk            = "0.15"
gdk-pixbuf     = "0.15"
gio            = "0.15"
glib           = "0.15"
gtk            = { version = "0.15", features = ["v3_24"] }
log            = "0.4"
notify         = "4.0.17"
pathbuftools   = "0.1.2"
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
regex          = "1.7.1"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
serde_yaml     = "0.9.16"
structopt      = { version = "0.3.26", default-features = false }
tempfile       = "3.3.0"
webkit2gtk     = "0.18.2"

[dev-dependencies]
claim = "0.5.0"
